# rss2discord

./: .dockerignore  .gitignore  .sonarcloud.properties  Dockerfile  README.md  app.py  compose.prod.yaml  compose.yaml  config.example.yaml  configuration.py  delivery_store.py  discord_client.py  discord_components.py  main.py  models.py  pyproject.toml  source_labels.py
.github/workflows/: ci.yaml  docker.yaml  lint.yaml  test.yaml
adapters/: __init__.py  base.py  hackernews.py  reddit.py
config/: config.example.yaml
docs/superpowers/specs/: 2026-07-20-richer-source-cards-design.md  2026-07-21-itmk-oglasnik-design.md  2026-07-21-source-adapters-design.md  2026-07-22-anhoch-price-tracking-design.md
src/rss2discord/: __main__.py  anhoch_money.py  app.py  configuration.py  delivery_store.py  fetch_errors.py  main.py  models.py  price_runtime.py  retries.py  scheduler.py
src/rss2discord/adapters/: __init__.py  base.py  hackernews.py  reddit.py
src/rss2discord/discord/: client.py  components.py  source_labels.py
src/rss2discord/transports/: __init__.py  anhoch.py  anhoch_catalog.py  anhoch_catalog_bounds.py  anhoch_catalog_url.py  anhoch_models.py  anhoch_price_monitor.py  base.py  itmk_oglasnik.py  itmk_oglasnik_http.py  rss.py  setec.py  xenforo.py
strategies/: __init__.py  base.py  rss_strategy.py  rss_timestamp.py  xenforo_strategy.py
tests/: __init__.py  anhoch_helpers.py  anhoch_price_monitor_helpers.py  app_helpers.py  discord_components_helpers.py  itmk_oglasnik_fixtures.py  test_anhoch.py  test_anhoch_catalog_response_bounds.py  test_anhoch_catalog_scan_bounds.py  test_anhoch_catalog_traversal.py  test_anhoch_latest_strategy.py  test_anhoch_money_models.py  test_anhoch_price_monitor.py  test_anhoch_price_monitor_interruptions.py  test_anhoch_price_monitor_shutdown.py  test_app.py  test_app_fetch_retries.py  test_app_persistence.py  test_config_example.py  test_configuration.py  test_configuration_runtime.py  test_delivery_store.py  test_discord_client.py  test_discord_client_retry_edges.py  test_discord_component_limits.py  test_discord_component_recursive_limits.py  test_discord_components.py  test_discord_source_layout.py  test_discord_source_metadata.py  test_github_releases.py  test_hackernews_adapter.py  test_itmk_oglasnik.py  test_itmk_oglasnik_fetch.py  test_itmk_oglasnik_redirects.py  test_models.py  test_reddit_adapter.py  test_rss_card_metadata.py  test_rss_fetch_hardening.py  test_runtime_wiring.py  test_scheduler.py  (+2 more)
