[project]
name = "rss2discord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "forumscraper>=0.1.21",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[project.scripts]
rss2discord = "rss2discord.main:main"

[build-system]
requires = ["uv_build>=0.11.32,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.0.2",
    "ruff>=0.16.0",
    "types-pyyaml>=6.0.12.20260724",
    "types-requests>=2.33.0.20260712",
]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "COM",
    "C4",
    "DTZ",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "PTH",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "PLR2004",
    "PLR0912",
    "PLR0915",
    "TRY003",
    "PLR0911",
    "RET504",
    "RUF001",
    "E501",
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "SLF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
